# flatopia

./: .env  .gitignore  LANGCHAIN_MIGRATION.md  PROMPT_MODIFICATION_GUIDE.md  PROMPT_OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.md  SMS_README.md  SMS_SYSTEM_SUMMARY.md  app.py  env.example  flatopia_app.py  immigration_app.py  langchain_app.py  langchain_run.py  llm_config.py  monitor_sms.py  pyproject.toml  requirements.txt  run.py  simple_langchain_app.py  sms_api.py  sms_sessions.db  start_simple_sms.py  start_sms_production.py  start_sms_service.py  test.py  test_basic_langchain.py  test_call_to_action.py  test_complete_flow.py  test_faiss_final.py  test_faiss_integration.py  test_faiss_minimal.py  test_faiss_safe.py  test_faiss_safe_final.py  test_faiss_simple.py  test_fixed_system.py  test_full_interaction.py  test_immigration_system.py  test_import_only.py  (+12 more)
KnowledgeBase/: faiss_universities_index.index  faiss_universities_index_metadata.pkl  faiss_visas_index.index  faiss_visas_index_metadata.pkl
api/: __init__.py  forward_stub.py  langchain_api.py  main.py  mm_inbound_worker.py  simple_sms_api.py  sms_api.py
config/: sms.env.example
core/: __init__.py  chat_manager.py  config.py  document_processor.py  faiss_knowledge_base.py  flatopia_chat_manager.py  groq_client.py  immigration_chat_manager.py  knowledge_updater.py  langchain_chat_manager.py  langchain_config.py  multi_api_llm.py  rag_system.py  simple_chat_manager.py  simple_langchain_config.py  smart_search.py  sms_chat_manager.py  sms_database.py  sms_flow_engine.py  sms_knowledge_sync.py
(+28 files in other folders)
