[project]
authors = [{ name = "Owen", email = "yiwuouyang@outlook.com" }]
dependencies = [
    "tavily-python>=0.7.12,<0.8",
    "sentence-transformers>=5.1.0,<6",
    "langflow>=1.5.1,<2",
    "langchain-nvidia-ai-endpoints>=0.3.8,<0.4",
]
name = "flatopia"
requires-python = "==3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
# flatopia = { path = ".", editable = true }

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.9"

[tool.pixi.feature.gpu.pypi-dependencies]
torch = { version = ">=2.8.0, <3", index = "https://download.pytorch.org/whl/cu129" }

[tool.pixi.feature.cpu.pypi-dependencies]
torch = ">=2.8.0, <3"

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
hnswlib = ">=0.8.0,<0.9"
chroma-hnswlib = ">=0.7.6,<0.8"

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=2.3.3,<2.4"

[tool.pixi.environments]
default = ["cpu"]
gpu = ["gpu"]
